hphp/test/quick/redeclared_function.php.expectf
HipHop Fatal error: Function already defined: f in %s on line 6
